Bug 430112 - <nsAutoLock.cpp>: 2 "warning: unused variable status"; (Bv1) Split the init to 2 instructions; r=benjamin